# cpp-server

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  dockerfile  environment.h  fly.toml  makefile  server.cpp  server.h  startServer.cpp
.github/workflows/: fly.yml
networking/: bindingSocket.cpp  bindingSocket.hpp  connectingSocket.cpp  connectingSocket.hpp  cppServerLib-networking.cpp  cppServerLib-networking.h  createSocket.cpp  createSocket.hpp  socketConnection.cpp  socketConnection.hpp
networking/requests/: get.cpp  get.h  httprequestparser.h  httpresponseparser.h  request.h  response.h  urlparser.h
networking/requests/GET/: get.cpp  get.h
networking/server/: createServer.cpp  createServer.h  test.cpp  testServer.cpp  testServer.h
networking/sockets/: bindingSocket.cpp  bindingSocket.h  connectingSocket.cpp  connectingSocket.h  cppServerLib-sockets.cpp  cppServerLib-sockets.h  createSocket.cpp  createSocket.h  listeningSocket.cpp  listeningSocket.h  main.cpp
public/: 404.html  index.html
public/css/: menu.css  style.css
public/js/: script.js
public/path/: index.html
tests/: socketTest.cpp
